[package]
name = "project-db"
version = "0.1.0"
edition = "2024"
description = "A simple CLI project database manager that lets you manage your current programming projects."
license = "MIT"
repository = "https://github.com/CommandCrafterx/project-db"
[dependencies]
dialoguer = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"